force-app/main/default/objects/CommerceEntitlementPolicy/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Entitlement Policies</relationshipLabel>
    <relationshipName>Entitlement_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>