force-app/main/default/objects/CommerceEntitlementPolicy/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRM-1669</description>
    <label>Brand</label>
    <referenceTo>WebshopBrand__c</referenceTo>
    <relationshipLabel>Entitlement Policies</relationshipLabel>
    <relationshipName>EntitlementPolicies</relationshipName>
    <type>Lookup</type>
</CustomField>