force-app/main/default/objects/CommerceEntitlementPolicy/fields/NoAutoUpdate__c.field-meta.xml
<CustomField>
    <fullName>NoAutoUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, no automated price update in B2BProductPriceCalculatorQueue happens. CRM-549</description>
    <label>No Auto Update</label>
    <type>Checkbox</type>
</CustomField>